namespace RJCP.App.DltDump
{
    using View;

    public static class Program
    {
        public static int Main(string[] args)
        {
            return (int)CommandLine.Run(args);
        }
    }
}
